--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "sky-insight",
+  "proxy": "https://api.aeronautical.info",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
